# omniget-plugin-convert

./: Cargo.toml  README.md  plugin.json
.github/workflows/: release.yml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: index.js
frontend/src/convert/: +page.svelte
frontend/src/lib/: convert-store.svelte.ts
i18n/: el.json  en.json  fr.json  it.json  ja.json  pt.json  zh.json
src/: lib.rs  state.rs
src/commands/: convert.rs
