[package]
name = "omniget-plugin-convert"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
omniget-core = { git = "https://github.com/tonhowtf/omniget", features = ["desktop"] }
omniget-plugin-sdk = { git = "https://github.com/tonhowtf/omniget" }
